# kokt.nok

./: .gitignore  LICENSE  README.md
data/: hoytid_forslag.json
docs/: IDEER.md
docs/superpowers/plans/: 2026-06-12-favoritter.md  2026-06-12-prisestimat.md  2026-06-15-bilder-i-db.md  2026-06-15-godt-scraper.md  2026-06-16-handleliste.md  2026-06-17-notater.md  2026-06-17-temaer.md  2026-06-18-cookmode-timere.md  2026-06-18-kosthold-filter.md  2026-06-19-lager-kjoeleskap.md  2026-06-22-vinanbefaling.md  2026-06-23-helseprofil.md  2026-06-23-tidsbasert-forside.md  2026-06-24-bedre-sok.md  2026-06-24-hoytid-sesong.md  2026-06-24-midjefilter.md  2026-06-24-oppskriftsversjonering.md  2026-06-25-hoytidspynt.md  2026-06-26-i18n-a-gui-plan.md  2026-06-26-i18n-b-db-plan.md  2026-06-26-i18n-c-rust-plan.md
docs/superpowers/specs/: 2026-06-12-favoritter-design.md  2026-06-12-prisestimat-design.md  (+24 more)
kokebok-app/: README.md  package-lock.json  package.json
kokebok-app/src/: app.css  app.html
kokebok-app/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.conf.linux.json
kokebok-app/src-tauri/.cargo/: config.toml.example
kokebok-app/src-tauri/icons/: icon.icns
kokebok-app/src-tauri/src/: lib.rs  main.rs
scripts/: build-linux.sh  bygg_bundle_db.py  bygg_fts.py  hent_godt.py  hent_naering.py  hent_priser.py  importer_hoytid.py  kassal.py  legg_til_indekser.py  oversett_til_engelsk.py  recompress_bilder.py  requirements-dev.txt  tagg_hoytid.py  tagg_ingredienser.py  test_hent_godt.py  test_kassal.py  test_tagg_hoytid.py  test_tagg_ingredienser.py
(+32 files in other folders)
