[package]
name = "kokebok-app"
version = "1.0.9"
description = "Steike bra"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
about = []

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kokebok_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-store = "2.4.3"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Power", "Win32_Foundation"] }

[profile.release]
opt-level = "s"      # optimaliser for størrelse
lto = true           # link-time optimization
codegen-units = 1
panic = "abort"
strip = true         # fjern symboler fra binæren

